updates css links for pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <head>
-	<link rel="stylesheet" href="main.css">
-	<script type="text/javascript" src="jquery.js"></script>
-	<script type="module" src="main.js"></script>
+	<link rel="stylesheet" href="static/main.css">
+	<script type="text/javascript" src="static/jquery.js"></script>
+	<script src="static/main.js" defer></script>
 </head>
 <body>
 	<div class="bigGame">
