--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <head>
 	<link rel="stylesheet" href="static/main.css">
-	<script type="text/javascript" src="static/jquery.js"></script>
-	<script src="static/main.js" defer></script>
+	<!-- <script type="text/javascript" src="static/jquery.js"></script>
+	<script src="static/main.js" defer></script> -->
+	<script src="static/bot.js" defer></script>
 </head>
 <body>
+	<div class="difficultyPopup">
+		
+		<button class="continueToGame"></button>
+	</div>
 	<div class="bigGame">
 		<div class="tinyGame">
 			<div class="tinySquare"></div>
